--- a/ios/StateHandlerApp/Info.plist
+++ b/ios/StateHandlerApp/Info.plist
@@ -36,6 +36,10 @@
 	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+<string>We need access to your photo library to allow you to select images.</string>
+<key>NSCameraUsageDescription</key>
+<string>We need access to your camera to allow you to take photos.</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>arm64</string>
