--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-date-picker": "^5.0.7",
     "react-native-element-dropdown": "^2.12.1",
     "react-native-image-crop-picker": "^0.41.2",
+    "react-native-multiple-select": "^0.5.12",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^10.1.0",
